objects/Outbound_SMS__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Outbound SMS</relationshipLabel>
        <relationshipName>Outbound_SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMS_Body__c</fullName>
        <label>SMS Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Outbound SMS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SMS_Body__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Outbound SMS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>